Fixed modal overlapping issue Removed base css code for ant code

--- a/src/css/components/nav-bar/_nav-login-modal.scss
+++ b/src/css/components/nav-bar/_nav-login-modal.scss
@@ -5,10 +5,12 @@
 
   .login-modal {
     position: absolute;
+    z-index: 1;
     top: 80px;
     width: 480px;
 
     grid-template-rows: 55px auto;
+    background-color: white;
     box-shadow: 0 9px 28px 8px rgba(0, 0, 0, 0.05), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12);
 
     .login-modal__header {
